especies para a localizacao no user, na homepage

--- a/public/views/index.htm
+++ b/public/views/index.htm
@@ -57,7 +57,7 @@
       <div id="google_maps_div" class="col-xs-10 col-sm-10 col-md-10 col-lg-10 div_full_height div_borders">
         <div id="map" class="div_full_height"> </div>
       </div>
-      <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 div_full_height div_borders">
+      <div id="showSpecies" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 div_full_height div_borders">
          Espécies Presentes: 
       </div>
     </div>
