--- a/public/views/index.htm
+++ b/public/views/index.htm
@@ -52,22 +52,16 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-  <div class="container-fluid div_full_height">
-    <div id="main_div" class="row"> 
-      <div id="google_maps_div" class="col-xs-10 col-sm-10 col-md-10 col-lg-10 div_full_height div_borders">
+  <div id="main_div" class="">
+    <div id="" class="div_borders div_full_height"> 
+      <div class="div_full_height">
         <div id="map" class="div_full_height"> </div>
       </div>
-      <div id="showSpecies" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 div_full_height div_borders">
-         Espécies Presentes: 
-      </div>
     </div>
-    <div id="logs_div" class="row div_borders"> 
-      <p id="log">LOG:</p>
+    <div id="showSpecies" class="div_borders"> 
     </div>
     
-  </div>
-    
-    
+  </div> 
   </body>
 </html>
 <script src="https://maps.googleapis.com/maps/api/js?callback=initMap" async defer></script>
