--- a/public/views/index.htm
+++ b/public/views/index.htm
@@ -62,6 +62,6 @@
     </div>
     
   </div>
-  <script src="https://maps.googleapis.com/maps/api/js?callback=initMap&libraries=drawing" async defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?callback=initMap" async defer></script>
   </body>
 </html>
