--- a/public/views/index.htm
+++ b/public/views/index.htm
@@ -13,7 +13,9 @@
     <script src="js/bootstrap.min.js"></script>
 
     <link href="css/index.css" rel="stylesheet">
-    <script src="js/index.js"></script>
+    <script src="js/maps.js"></script>
+    <script src="js/fog.js"></script>
+    <script src="js/species.js"></script>
   </head>
   <body>
   <nav id="menu_div" class="navbar navbar-default navbar-static-top">
