enviar username para a view como em php

--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -48,7 +48,7 @@
             </li> -->
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Welcome: Username</a></li>
+            <li><a href="#">Welcome: <%= username %></a></li>
             <li class="active"><a id="logout" href="#">Logout</a></li>
           </ul>
         </div><!--/.nav-collapse -->
