--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>Explocafora</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
@@ -16,54 +16,55 @@
     <script src="js/maps.js"></script>
     <script src="js/fog.js"></script>
     <script src="js/species.js"></script>
-  </head>
-  <body>
-  <nav id="menu_div" class="navbar navbar-default navbar-static-top">
-      <div class="container">
+</head>
+<body>
+<nav id="menu_div" class="navbar navbar-default navbar-static-top">
+    <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">Exploracafora</a>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">Exploracafora</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <!--<li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li> -->
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Welcome: <%= username %></a></li>
-            <li class="active"><a id="logout" href="#">Logout</a></li>
-          </ul>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="/">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <!--<li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li class="dropdown-header">Nav header</li>
+                    <li><a href="#">Separated link</a></li>
+                    <li><a href="#">One more separated link</a></li>
+                  </ul>
+                </li> -->
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Welcome: <%= username %></a></li>
+                <li class="active"><a id="logout" href="#">Logout</a></li>
+            </ul>
         </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-  <div id="main_div" class="">
-    <div id="" class="div_borders div_full_height"> 
-      <div class="div_full_height">
-        <div id="map" class="div_full_height"> </div>
-      </div>
     </div>
-    <div id="showSpecies" class="div_borders"> 
+</nav>
+<div id="main_div" class="">
+    <div id="" class="div_borders div_full_height">
+        <div class="div_full_height">
+            <div id="map" class="div_full_height"></div>
+        </div>
     </div>
-    
-  </div>
-  <script src="https://maps.googleapis.com/maps/api/js?callback=initMap" async defer></script>
-  </body>
+    <div id="showSpecies" class="div_borders">
+    </div>
+
+</div>
+<script src="https://maps.googleapis.com/maps/api/js?callback=initMap" async defer></script>
+</body>
 </html>
