--- a/public/views/catalog.ejs
+++ b/public/views/catalog.ejs
@@ -17,8 +17,21 @@
 </head>
 <body>
 <% include ./partials/headerMenu %>
-<div id="owned" class="w3-container row">
+<div class="w3-container row">
+    <div class="col-md-12 col-xs-12 col-lg-12" style="background-color: gray; padding: 5px;">
+        <div class="w3-card-12" style="background-color: white;">
+            <div class="w3-container w3-center">
+                <p id="numSpecies"></p>
+            </div>
+        </div>
+    </div>
+</div>
+<div id="known" class="w3-container row">
+
+</div>
+<div id="unknown" class="w3-container row">
 
 </div>
 </body>
 </html>
+
