--- a/public/views/partials/headerMenu.ejs
+++ b/public/views/partials/headerMenu.ejs
@@ -13,13 +13,7 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class=""><a href="/">Home</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Catalog <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="catalog?known=true">Known Species</a></li>
-                        <li><a href="catalog?known=false">Unknown Species</a></li>
-                    </ul>
-                </li>
+                <li class=""><a href="catalog">Catalog</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#">Welcome: <%= username %></a></li>
