--- a/public/views/partials/headerMenu.ejs
+++ b/public/views/partials/headerMenu.ejs
@@ -1,3 +1,4 @@
+<link href="css/search.css" rel="stylesheet">
 <nav id="menu_div" class="navbar navbar-default navbar-static-top">
     <div class="container">
         <div class="navbar-header">
@@ -9,10 +10,16 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="/">Exploracafora</a>
+            <form id="form-search" class="nav navbar-form navbar-left" role="search">
+                <div class="form-group">
+                    <input id="form-search-input" type="text" class="form-control" placeholder="Search">
+                </div>
+                <ul id="results" style="position: absolute">
+                </ul>
+            </form>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li class=""><a href="/">Home</a></li>
                 <li class=""><a href="catalog">Catalog</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -22,3 +29,4 @@
         </div><!--/.nav-collapse -->
     </div>
 </nav>
+<script src="js/search.js"></script>
