search by location

--- a/public/views/partials/headerMenu.ejs
+++ b/public/views/partials/headerMenu.ejs
@@ -21,6 +21,7 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class=""><a href="catalog">Catalog</a></li>
+                <li class=""><a href="search">Search by Location</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#">Welcome: <%= username %></a></li>
