--- a/public/views/partials/headerMenu.ejs
+++ b/public/views/partials/headerMenu.ejs
@@ -20,6 +20,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
+                <li class=""><a href="/">Map</a></li>
                 <li class=""><a href="catalog">Catalog</a></li>
                 <li class=""><a href="search">Search by Location</a></li>
             </ul>
