--- a/public/views/catalog.ejs
+++ b/public/views/catalog.ejs
@@ -11,6 +11,7 @@
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/species.js"></script>
     <script src="js/catalog.js"></script>
     <link href="css/index.css" rel="stylesheet">
     <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
