--- a/public/views/catalog.ejs
+++ b/public/views/catalog.ejs
@@ -14,7 +14,7 @@
     <script src="js/species.js"></script>
     <script src="js/catalog.js"></script>
     <link href="css/index.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+    <link rel="stylesheet" href="css/w3.css">
     <style type="text/css">
         .auto-grid {
             -moz-column-count: 2;
@@ -28,7 +28,7 @@
 
         .auto-grid > div {
             display: inline-block;
-            width: 98%;
+            width: 100%;
         }
     </style>
 </head>
