--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -37,11 +37,11 @@
                             <form id="login-form" action="/login" method="post" role="form" style="display: block;">
                                 <div class="form-group">
                                     <input type="text" name="username" id="username" tabindex="1" class="form-control"
-                                           placeholder="Username" value="">
+                                           placeholder="Username" value="admin">
                                 </div>
                                 <div class="form-group">
                                     <input type="password" name="password" id="password" tabindex="2"
-                                           class="form-control" placeholder="Password">
+                                           class="form-control" placeholder="Password" value="admin">
                                 </div>
                                 <div class="form-group">
                                     <div class="row">
